--- a/query/package.json
+++ b/query/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "posts",
+  "name": "query",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,9 +14,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
-  },
-  "devDependencies": {
+    "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
 }
